// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#PasswordField() it should display validation errors 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "password": "a",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value="a"
  />
</form>
`;

exports[`#PasswordField() should confirm passwords are equal 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "wizard",
      "password": "wizard",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value="wizard"
  />
  <input
    className=""
    name="confirmPassword"
    onChange={[Function]}
    type="password"
    value="wizard"
  />
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "w",
      "password": "wizard",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value="wizard"
  />
  <input
    className=""
    name="confirmPassword"
    onChange={[Function]}
    type="password"
    value="w"
  />
</form>
`;

exports[`#PasswordField() should how message that passwords are not equal 2`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "w",
      "password": "wizard",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value="wizard"
  />
  <input
    className=""
    name="confirmPassword"
    onChange={[Function]}
    type="password"
    value="w"
  />
  <div
    className=""
  >
    Fields do not match
  </div>
</form>
`;

exports[`#PasswordField() should maintain a disabled submit button with both password fields not matching 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "confirmPassword": "",
      "password": "",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value=""
  />
  <input
    className=""
    name="confirmPassword"
    onChange={[Function]}
    type="password"
    value=""
  />
  <button
    className="btn btn-success btn-lg"
    disabled={true}
  >
    Submit MockComponent
  </button>
</form>
`;

exports[`#PasswordField() should render a single input tag with no bootstrap styles 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "password": "",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value=""
  />
</form>
`;

exports[`#PasswordField() should render an input field with the bootstrap styled tags 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "password": "joe",
    }
  }
>
  <input
    className=""
    name="password"
    onChange={[Function]}
    type="password"
    value="joe"
  />
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  bare="false"
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;
